Name: webcspm
Version: 0.1
License: BSD3
License-File: LICENSE.txt
Author: Thomas Gibson-Robinson
Maintainer: thomas.gibsonrobinson@gmail.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

Executable webcspm
    hs-source-dirs: src
    Main-is: Main.hs

    Build-depends:
        libcspm >= 0.2 && < 0.3,
        -- Snap Dependenicies
        base >= 4 && < 5,
        bytestring >= 0.9.1 && < 0.10,
        data-lens >= 2.0.1 && < 2.1,
        data-lens-template >= 2.1 && < 2.2,
        heist >= 0.7 && < 0.8,
        MonadCatchIO-transformers >= 0.2.1 && < 0.3,
        mtl >= 2 && < 3,
        snap == 0.7.*,
        snap-core   == 0.7.*,
        snap-server == 0.7.*,
        text >= 0.11 && < 0.12,
        time >= 1.1 && < 1.5,
        utf8-string >= 0.3 && < 0.4,
        xmlhtml == 0.1.*

    if impl(ghc >= 6.12.0)
        ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
        ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
